# sdl3base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: config.cfg
res/gpu_shared/: cpu_gpu_shared.h
res/shaders/: post.frag.hlsl  post.vert.hlsl  post2.frag.hlsl  screen.frag.hlsl  screen.vert.hlsl  screen_tri.hlsli
src/: app_state.cpp  app_state.h  defines.h  game_state.cpp  game_state.h  gpu.cpp  main.cpp
src/config/: config.cpp  config.h
src/render/: gpu.h  gpu_buffer.cpp  gpu_buffer.h  gpu_texture.cpp  gpu_texture.h  renderer.cpp  renderer.h  shader.cpp  shader.h
